--- a/public/main.css
+++ b/public/main.css
@@ -27,49 +27,49 @@
     overflow: hidden;
 }
 
-.stage-container {
+.stages-container {
     display: flex;
     width: 100%;
 }
 
 .stage {
-    flex-basis: 100%;
     color: #676767;
+    flex-basis: 100%;
 }
 
-.stage.passed {
-    background: linear-gradient(to bottom, #b4ddb4, #169116);
-}
-
-.stage.building {
+.stage-building {
+    animation: scrolling 6s infinite linear;
     background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 16px), linear-gradient(#c2d0b4, #557716);
-    animation: scrolling 6s infinite linear;
 }
 
-.stage.recovering {
-    background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 16px), linear-gradient(#d3bfb4, #7e4a16);
-    animation: scrolling 6s infinite linear;
-}
-
-.stage.failed {
-    background: linear-gradient(to bottom, #ddb4b4, #911616);
-}
-
-.stage.failing {
-    background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 16px), linear-gradient(#d5bcb4, #824316);
-    animation: scrolling 6s infinite linear;
-}
-
-.stage.cancelled {
+.stage-cancelled {
     background: linear-gradient(to bottom, #ddbeb4, #915816);
 }
 
-.stage.unknown {
+.stage-failed {
+    background: linear-gradient(to bottom, #ddb4b4, #911616);
+}
+
+.stage-failing {
+    animation: scrolling 6s infinite linear;
+    background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 16px), linear-gradient(#d5bcb4, #824316);
+}
+
+.stage-passed {
+    background: linear-gradient(to bottom, #b4ddb4, #169116);
+}
+
+.stage-recovering {
+    animation: scrolling 6s infinite linear;
+    background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 16px), linear-gradient(#d3bfb4, #7e4a16);
+}
+
+.stage-unknown {
     background: linear-gradient(to bottom, #aeaeae, #858585);
 }
 
 @keyframes scrolling {
     100% {
-        background-position: 256px 0px;
+        background-position: 256px 0;
     }
 }
